--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,8 +1,21 @@
 <%= render partial: 'shared/navbar' %>
 
-<div class="container">
-  <div class="mt-3 mb-5">
-    <%= render partial: 'form' %>
+<div class="container mt-3 mb-5">
+  <div class="row">
+    <%# Form %>
+    <div class="col order-md-2 border-left mb-5">
+      <%= render partial: 'form' %>
+    </div>
+    <%# Response %>
+    <div class="col-md-8 order-md-1">
+      <a id="search-response-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
+      <div class="pb-5" style="min-height: 300px;">
+        <p class="search-response-title lead mb-5" style="display: none;">
+          <%= t('dashboard.form.search_response.html') %>
+        </p>
+        <div id="search-response"></div>
+      </div>
+    </div>
   </div>
 </div>
 
