--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,8 +3,11 @@
 <div class="container mt-3 mb-5">
   <div class="row">
     <%# Form %>
-    <div class="col order-md-2 border-left mb-5">
-      <%= render partial: 'form' %>
+    <div class="col order-md-2 border-left">
+      <div class="mb-5">
+        <%= render partial: 'form' %>
+      </div>
+      <hr class="mb-5 d-md-none">
     </div>
     <%# Response %>
     <div class="col-md-8 order-md-1">
