--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -25,7 +25,7 @@
       <input type="text" class="form-control mb-2 disabled" value="<%= current_user.screen_name %>" disabled>
       <div id="disabled-search-user" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></div>
     </div>
-    <div class="text-info small mt-1"><%= t('.search_user.free_help') %></div>
+    <div class="text-muted small mt-1"><%= t('.search_user.free_help') %></div>
     <input type="hidden" id="search-user" value="<%= current_user.screen_name %>">
     <script>
       $('#disabled-search-user').on('click', function () {
@@ -106,6 +106,7 @@
     <div id="search-label-underline" class="underline"></div>
   </div>
   <input type="text" id="search-label" class="form-control mb-2" list="search-label-options"
+         value="<%= current_user.to_user_decorator(self).job_label_s %>"
          data-placeholder="<%= t('.search_label.placeholder') %>"
          data-placeholder-job="<%= t('.search_label.placeholder_job') %>"
          data-placeholder-location="<%= t('.search_label.placeholder_location') %>"
@@ -123,7 +124,10 @@
 
 <%# Filter %>
 <div class="mb-5">
-  <label class="d-block" for="search-filter"><%= t('.filter') %></label>
+  <div>
+    <label for="search-filter"><%= t('.filter') %></label>
+    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.filter_help') %>"></i>
+  </div>
   <select id="search-filter" class="custom-select">
     <option selected><%= t('.not_specified') %></option>
     <% Filter::VALUES.each.with_index do |value, i| %>
@@ -137,7 +141,10 @@
 
 <%# Sort %>
 <div class="mb-5">
-  <label class="d-block" for="search-sort"><%= t('.sort') %></label>
+  <div>
+    <label for="search-sort"><%= t('.sort') %></label>
+    <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.sort_help') %>"></i>
+  </div>
   <select id="search-sort" class="custom-select">
     <option value="<%= Sort::VALUES[0] %>" selected><%= Sort.value_to_label(Sort::VALUES[0]) %></option>
     <option value="<%= Sort::VALUES[1] %>"><%= Sort.value_to_label(Sort::VALUES[1]) %></option>
@@ -146,7 +153,7 @@
 
 <%# check %>
 <div class="form-group form-check mb-5">
-  <input type="checkbox" class="form-check-input" id="reduced-display-check" checked>
+  <input type="checkbox" class="form-check-input" id="reduced-display-check" <%= 'checked' if request.from_smartphone? %>>
   <label class="form-check-label" for="reduced-display-check"><%= t('.reduced_display.title') %></label>
   <i class="far fa-question-circle text-muted" data-toggle="tooltip" data-placement="top" title="<%= t('.reduced_display.tooltip') %>"></i>
 </div>
@@ -166,7 +173,9 @@
     var form = new SearchForm('<%= raw api_searches_path %>', i18n);
     var label = new SearchLabel('<%= raw api_label_options_path %>', form);
     form.setSearchLabel(label);
-    label.fetchOptions();
+    label.fetchOptions(function () {
+      form.search();
+    });
 
     $('[data-toggle="tooltip"]').tooltip();
   });
