--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div id="new-age-navbar" class="new-age-container">
   <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav" style="background-color: white;">
     <div class="container border-bottom">
-      <a class="navbar-brand" style="color: #222;" href="#" data-toggle="modal" data-target="#support-modal"><%= t('app_name') %></a>
+      <a class="navbar-brand" style="color: #222;" href="#"><%= t('app_name') %></a>
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
           <a class="nav-link" style="color: #222; text-transform: none;" href="#" data-toggle="modal" data-target="#support-modal">
@@ -22,4 +22,13 @@
     } catch (e) {
     }
   })();
+
+  $('.navbar-brand').on('click', function () {
+    if ($(window).scrollTop() === 0) {
+      var url = '<%= raw root_path(via: 'brand') %>';
+      window.location.href = url;
+    } else {
+      $('body').animate({scrollTop: 0});
+    }
+  });
 </script>
