Rename from xxx_label to xxx_bagde

--- a/app/views/templates/_search_response_user_template.html.erb
+++ b/app/views/templates/_search_response_user_template.html.erb
@@ -12,11 +12,11 @@
           <strong class="d-none d-md-inline-block">{{name}}</strong>
           <a class="d-md-none text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name_s}}</a>
           <a class="d-none d-md-inline-block text-muted" href="https://twitter.com/{{screen_name}}" target="_blank">@{{screen_name}}</a>
-          {{{protected_label}}}
-          {{{verified_label}}}
+          {{{protected_icon}}}
+          {{{verified_icon}}}
         </div>
         <div>
-          <div class="small">{{{labels}}}</div>
+          <div class="small">{{{badges}}}</div>
         </div>
       </div>
     </div>
