--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -3,14 +3,14 @@
 <div class="container mt-3 mb-5">
   <div class="row">
     <%# Form %>
-    <div class="col order-md-2 border-left">
+    <div class="col-md-4 order-md-2 border-left">
       <div class="mb-5">
         <%= render partial: 'form' %>
       </div>
       <hr class="mb-5 d-md-none">
     </div>
     <%# Response %>
-    <div class="col-md-8 order-md-1">
+    <div class="col order-md-1">
       <a id="search-response-anchor" style="display: block; position: relative; top: -60px; visibility: hidden;"></a>
       <div class="pb-5" style="min-height: 300px;">
         <p class="search-response-title lead mb-5" style="display: none;">
