--- a/app/views/dashboard/_form.html.erb
+++ b/app/views/dashboard/_form.html.erb
@@ -25,7 +25,7 @@
       <input type="text" class="form-control mb-2 disabled" value="<%= current_user.screen_name %>" disabled>
       <div id="disabled-search-user" style="position: absolute; top: 0; right: 0; bottom: 0; left: 0;"></div>
     </div>
-    <div class="text-muted small mt-1"><%= t('.search_user.free_help') %></div>
+    <div class="text-muted small mt-1"><%= t('.search_user.free_help_html') %></div>
     <input type="hidden" id="search-user" value="<%= current_user.screen_name %>">
     <script>
       $('#disabled-search-user').on('click', function () {
@@ -169,7 +169,7 @@
       loading: '<%= t('.js.loading') %>',
       specify_correct_label: '<%= t('.js.specify_correct_label') %>',
       no_results_found: '<%= t('.js.no_results_found_html', app: t('app_name')) %>',
-      payment_required: '<%= t('.js.payment_required') %>'
+      payment_required: '<%= t('.js.payment_required_html') unless current_user.has_subscription? %>'
     };
     var form = new SearchForm('<%= raw api_searches_path %>', i18n);
     var label = new SearchLabel('<%= raw api_label_options_path %>', form);
