--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -1,4 +1,5 @@
-.search-this-user i {
+.search-this-user i.fa-search,
+.btn-checkout i.fa-search {
   color: #7b4397;
   background: linear-gradient(to left, #7b4397, #dc2430);
   -webkit-background-clip: text;
