--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,6 +16,7 @@
         <p class="search-response-title lead mb-5" style="display: none;">
           <%= t('dashboard.form.search_response.html') %>
         </p>
+        <p class="search-response-error lead mb-5" style="display: none;"></p>
         <div id="search-response"></div>
       </div>
     </div>
