--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -160,7 +160,7 @@
     </div>
   </section>
 
-  <section class="cta">
+  <section class="cta" style="display: none;">
     <div class="cta-content">
       <div class="container">
         <h2><%= t('.cta.title') %></h2>
@@ -169,8 +169,12 @@
     </div>
     <div class="overlay"></div>
   </section>
+</div>
 
-  <section class="contact bg-primary" id="contact">
+<%= render partial: 'pricing' %>
+
+<div class="new-age-container">
+  <section class="contact" id="contact">
     <div class="container">
       <h2><%= t('.contact.title_html') %></h2>
       <div class="mb-5"><%= t('.contact.text_html') %></div>
