--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,9 @@
 <head>
   <title><%= t('app_name') %></title>
   <meta charset="utf-8">
-  <!--meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"-->
+  <% if controller_name == 'home' %>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <% end %>
   <meta name="description" content="">
   <meta name="author" content="">
   <%= csrf_meta_tags %>
