--- a/app/views/home/_pricing.html.erb
+++ b/app/views/home/_pricing.html.erb
@@ -30,7 +30,7 @@
               <li class="text-muted"><span class="fa-li"><i class="fas fa-times"></i></span><%= t('.free.search_anyone') %></li>
             </ul>
             <% if user_signed_in? %>
-              <a href="#" class="btn btn-block"><%= t('.free.already_signed_in') %></a>
+              <a href="#" class="btn btn-block disabled"><%= t('.free.already_signed_in') %></a>
             <% else %>
               <a href="<%= raw user_twitter_omniauth_authorize_path(via: 'pricing_free') %>" class="btn btn-block"><%= t('.free.button') %></a>
             <% end %>
@@ -64,7 +64,7 @@
             </ul>
             <% if user_signed_in? %>
               <% if current_user.has_subscription? %>
-                <a href="#" class="btn btn-block"><%= t('.plus.already_purchased') %></a>
+                <a href="#" class="btn btn-block disabled"><%= t('.plus.already_purchased') %></a>
               <% else %>
                 <a href="#" class="btn btn-block btn-checkout"><%= t('.plus.button') %></a>
               <% end %>
