--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -16,10 +16,16 @@
         <p class="search-response-title lead mb-5" style="display: none;">
           <%= t('dashboard.form.search_response.html') %>
         </p>
-        <p class="search-response-error lead mb-5" style="display: none;"></p>
-        <% unless current_user.has_subscription? %>
-          <p class="text-muted small mb-5"><%= t('.note_html') %></p>
+
+        <p id="search-response-error" class="lead mb-5" style="display: none;"></p>
+        <p id="specify-correct-label-message" class="lead mb-5" style="display: none;"><%= t('dashboard.form.js.specify_correct_label_html') %></p>
+
+        <% if current_user.has_subscription? %>
+          <p class="text-muted small mb-5"><%= t('.plus_plan_note_html') %></p>
+        <% else %>
+          <p class="text-muted small mb-5"><%= t('.free_plan_note_html') %></p>
         <% end %>
+
         <div id="search-response"></div>
       </div>
     </div>
