--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -19,6 +19,7 @@
 
         <p id="search-response-error" class="lead mb-5" style="display: none;"></p>
         <p id="specify-correct-label-message" class="lead mb-5" style="display: none;"><%= t('dashboard.form.js.specify_correct_label_html') %></p>
+        <div id="no-results-found-message" class="mb-5" style="display: none;"><%= t('dashboard.form.js.no_results_found_html', app: t('app_name')) %></div>
 
         <% if current_user.has_subscription?(:pro) %>
           <%# Render nothing %>
